--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">SEP4</string>
+    <string name="add_new_event">add new event</string>
+    <string name="add_event_name">Event name</string>
+    <string name="add_event_date">Event date</string>
+    <string name="add_event_description">Event description</string>
+    <string name="add_list_of_requirements">List of requirements</string>
+    <string name="add_add_button">Add</string>
+    <string name="add_people_to_event_already_going">Already going</string>
+    <string name="add_people_to_event_friends_that_are_not_going">Friends that are not going</string>
+    <string name="suer_recycle_item_unknown">unknown</string>
 </resources>
