--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="add_event_description">Event description</string>
     <string name="add_list_of_requirements">List of requirements</string>
     <string name="add_add_button">Add</string>
-    <string name="add_people_to_event_already_going">Already going</string>
-    <string name="add_people_to_event_friends_that_are_not_going">Friends that are not going</string>
+    <string name="add_people_to_event_already_going">Invited</string>
+    <string name="add_people_to_event_friends_that_are_not_going">Not invited</string>
     <string name="suer_recycle_item_unknown">unknown</string>
+    <string name="add_people_to_event_apply_button">apply</string>
 </resources>
