added add friends

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="add_people_to_event_friends_that_are_not_going">Not invited</string>
     <string name="suer_recycle_item_unknown">unknown</string>
     <string name="add_people_to_event_apply_button">apply</string>
+    <string name="add_friends_to_event_you_have_no_friends">You have no friends!</string>
+    <string name="add_friends_search_by_name">Search by name</string>
+    <string name="add_friends_search_button">Search</string>
+    <string name="add_friends_search_results">search results</string>
+    <string name="add_friends_will_be_added">will be added</string>
 </resources>
