--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="add_friends_search_button">Search</string>
     <string name="add_friends_search_results">search results</string>
     <string name="add_friends_will_be_added">will be added</string>
+    <string name="reply_btn_text">Reply</string>
+    <string name="lack_of_comments">No comments yet.</string>
 </resources>
